# dnadesign

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  DESIGN.md  LICENSE  PLANS.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  __init__.py  codecov.yml  conftest.py  main.py  pixi.toml  pyproject.toml  utils.py
.codex_tmp/: audit_usr_export.csv  sitecustomize.py
.codex_tmp/audit_notify/: profile.json
.codex_tmp/audit_notify2/: profile.json
.codex_tmp/audit_usr_datasets2/: registry.yaml
.github/: tool-coverage-baseline.json
.github/workflows/: ci.yaml
configs/: evo_defaults.yaml  example.yaml
demo/: config.yaml
densegen/: __init__.py  densegen-docs.md  main.py  optimizer_wrapper.py  progress_tracker.py
docs/: INSTALL_BU_SCC.md  README.md  dependencies.md  installation.md  marimo-reference.md  marimo_reference.md  monorepo-organization-audit.md  notebooks.md  notify.md  start-here.md
docs/MIGRATIONS/: opal_vNext.md
docs/architecture/: README.md
docs/bu-scc/: README.md  agent-cheatsheet.md  agent_cheatsheet.md  batch-notify.md  install.md  quickstart.md  submission-reference.md
docs/dev/: README.md  journal.md  monorepo-organization-audit.md
docs/exec-plans/: README.md
docs/hpc/: README.md  agent_cheatsheet.md  bu_scc_batch_notify.md  bu_scc_install.md  bu_scc_ops_cheatsheet.md  bu_scc_quickstart.md
docs/notify/: README.md  usr-events.md  usr_events.md
docs/operations/: README.md  orchestration-runbooks.md
preprocessing/: preprocessing-docs.md  temp_prompt.md
seqfetcher/: utils.py
sequences/: sequences-docs.md
src/dnadesign/infer/: README.md  __init__.py  __main__.py  _console.py  _logging.py  adapter_dispatch.py  adapter_runtime.py  api.py  batch_policy.py  cli.py  cli_builders.py  cli_ingest.py  cli_requests.py  config.py  config.yaml  contracts.py  engine.py  errors.py  extract_chunk_writeback.py  extract_execution.py  generate_execution.py  input_parsing.py  logging.py  main.py  progress.py  pyproject.toml  registry.py  resume_planner.py  utils.py  writeback_dispatch.py
src/dnadesign/infer/adapters/: __init__.py  esm2.py  evo2.py  protocols.py
src/dnadesign/infer/docs/: README.md  index.md
src/dnadesign/infer/docs/architecture/: README.md
src/dnadesign/infer/docs/dev/: README.md  journal.md
src/dnadesign/infer/docs/getting-started/: README.md  cli-quickstart.md
src/dnadesign/infer/docs/operations/: README.md  pressure-test-agnostic-models.md  scc-evo2-gpu-uv-runbook.md
src/dnadesign/infer/docs/operations/examples/: pressure_test_infer_config.yaml  workspace_local_records_config.yaml
src/dnadesign/infer/docs/reference/: README.md  command-contracts.md
src/dnadesign/infer/docs/tutorials/: README.md  demo_pressure_test_usr_ops_notify.md
src/dnadesign/infer/ingest/: __init__.py  sources.py  validators.py
src/dnadesign/infer/presets/: __init__.py  registry.py
src/dnadesign/infer/presets/evo2/: extract_logits_ll.yaml
src/dnadesign/infer/src/: README.md  __init__.py  _logging.py  api.py  bootstrap.py  config.py  contracts.py  engine.py  errors.py  input_parsing.py  prune.py  registry.py  resource_contracts.py  usr_registry.py  utils.py  workspace.py
src/dnadesign/infer/src/adapters/: __init__.py  esm2.py  evo2.py  protocols.py
src/dnadesign/infer/src/cli/: __init__.py  app.py  builders.py  common.py  config_inputs.py  console.py  ingest.py  requests.py
src/dnadesign/infer/src/cli/commands/: __init__.py  adapters.py  extract.py  generate.py  presets.py  prune.py  run.py  validate.py  workspace.py
src/dnadesign/infer/src/ingest/: __init__.py  sources.py  validators.py
src/dnadesign/infer/src/presets/: __init__.py  registry.py
src/dnadesign/infer/src/runtime/: __init__.py  adapter_dispatch.py  adapter_runtime.py  batch_policy.py  capacity_planner.py  extract_chunk_writeback.py  extract_execution.py  extract_params.py  generate_execution.py  hardware_probe.py  ingest_loading.py  progress.py  resume_planner.py  resume_policy.py  writeback_dispatch.py
src/dnadesign/infer/src/writers/: __init__.py  pt_file.py  records.py  usr.py
src/dnadesign/infer/tests/: test_adapter_dispatch.py  test_adapter_runtime.py  test_batch_policy.py  test_cli_builders.py  test_cli_ingest.py  test_cli_requests.py  test_extract_chunk_writeback.py  test_extract_execution.py  test_extract_ingest_helper.py  test_generate_execution.py  test_generate_ingest_helper.py  test_input_parsing.py  test_namespace_contracts.py  test_presets.py  test_pressure_runbook_docs_contract.py  test_progress_handles.py  test_resume_planner.py  test_usr_writeback_contract.py  test_wrapper_contracts.py  test_writeback_dispatch.py
src/dnadesign/infer/tests/cli/: test_adapters_commands.py  test_builders.py  test_common.py  test_config_inputs.py  test_console.py  test_ingest.py  test_presets.py  test_prune_command.py  test_requests.py  test_run_command_config_inputs.py  test_validate_command.py  test_workspace_command.py
src/dnadesign/infer/tests/contracts/: test_namespace_contracts.py  test_usr_writeback_contract.py
src/dnadesign/infer/tests/docs/: test_information_architecture_contracts.py  test_pressure_runbook_docs_contract.py  test_scc_gpu_env_docs_contract.py  test_usr_docs_contract.py
src/dnadesign/infer/tests/package/: test_logging_policy.py  test_prune_module_layout.py  test_registry_bootstrap_contracts.py  test_source_tree_contracts.py  test_wrapper_contracts.py
src/dnadesign/infer/tests/runtime/: test_adapter_dispatch.py  test_adapter_runtime.py  test_batch_policy.py  test_capacity_planner.py  test_evo2_adapter_pooling_contracts.py  test_extract_chunk_writeback.py  test_extract_execution.py  test_extract_ingest_helper.py  test_extract_params.py  test_generate_execution.py  test_generate_ingest_helper.py  test_ingest_sources_usr.py  test_input_parsing.py  test_progress_handles.py  test_resume_planner.py  test_resume_policy.py  test_writeback_dispatch.py
src/dnadesign/infer/workspaces/: README.md
src/dnadesign/infer/writers/: __init__.py  pt_file.py  records.py  usr.py
usr/: remotes.yaml
(+3171 files in other folders)
