[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name            = "dnadesign"
version         = "0.1.0"
description     = "DNA sequence design pipelines and bioinformatics helpers."
authors         = [{ name = "Eric South", email = "ericjohnsouth@gmail.com" }]
readme          = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  "arviz",
  "biopython",
  "igraph",
  "leidenalg",
  "logomaker",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "pyarrow>=16",
  "pydantic",
  "pygments",
  "pymc",
  "python-levenshtein",
  "pyyaml",
  "rich",
  "scanpy==1.10.3",
  "seaborn",
  "tqdm",
  "typer",
  "xlrd",

  # Torch 2.7 aligns with CUDA 12.8 (SCC cuda/12.8 module) and Evo2’s Python 3.12 requirement.
  "torch>=2.7,<2.8; (sys_platform == 'darwin' and platform_machine == 'arm64') or (sys_platform == 'linux' and platform_machine == 'x86_64')",

  "dense-arrays",
]

[project.scripts]
usr        = "dnadesign.usr.src.cli:main"
opal       = "dnadesign.opal.src.cli:main"
dense      = "dnadesign.densegen.src.main:app"
infer      = "dnadesign.infer.cli:app"
cluster    = "dnadesign.cluster.src.cli.app:main"
permuter   = "dnadesign.permuter.src.cli.app:main"
mb         = "dnadesign.molbench.src.cli.app:cli"
baserender = "dnadesign.baserender.src.cli:app"

[project.optional-dependencies]
# GPU stack (Linux x86_64 only)
infer-evo2 = [
  # --- torch (GPU wheels via uv sources below)
  "torch>=2.7,<2.8; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torchvision>=0.22,<0.23; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torchaudio>=2.7,<2.8; sys_platform == 'linux' and platform_machine == 'x86_64'",

  # --- build helpers (required because we disable build isolation for flash-attn + TE-torch)
  "pip; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "setuptools; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "wheel; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "packaging; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "ninja; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "cmake>=3.18; sys_platform == 'linux' and platform_machine == 'x86_64'",

  # --- kernels
  # flash-attn commonly requires building against the torch in the env; install it w/o build isolation.
  "flash-attn>=2.8.0.post2,<3; sys_platform == 'linux' and platform_machine == 'x86_64'",

  # Transformer Engine: let it float within major=2.
  # (TE is a prereq for Evo2; Evo2 requires TE>=2.0.0)
  "transformer-engine[pytorch]>=2.0,<3; sys_platform == 'linux' and platform_machine == 'x86_64'",

  # --- evo2
  "evo2; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
test = ["pytest>=8.2", "pytest-cov", "hypothesis>=6.100"]
lint = ["ruff>=0.4", "pre-commit>=3.7"]
dev  = [{ include-group = "test" }, { include-group = "lint" }]
notebooks = ["marimo>=0.18.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["src/dnadesign"]
norecursedirs = ["*/archived/*", ".venv", "venv", "build", "dist", "*.egg-info"]
markers = ["slow: sampling-heavy tests (>10 s)"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
required-version = ">=0.9.18,<0.10"
default-groups = []
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# flash-attn + TE-torch must build against the same torch as the runtime env
# uv supports this directly and will do a two-phase install so deps (torch, pip, etc.) land first
no-build-isolation-package = ["flash-attn", "transformer-engine-torch"]

# Help uv resolve flash-attn without trying to build it during the resolution step.
[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
dense-arrays = { git = "https://github.com/e-south/dense-arrays" }

# When infer-evo2 is enabled, use CUDA 12.8 wheels for torch-family from PyTorch's CUDA index.
torch = [
  { index = "pytorch-cu128", extra = "infer-evo2", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "infer-evo2", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
  { index = "pytorch-cu128", extra = "infer-evo2", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
